# ScaleSFL

./: .gitignore  .gitmodules  .prettierrc  README.md
caliper-tests/: .gitignore  README.md  package.json  report.html  run-caliper-tests.sh
config/: core.yaml
example-participant/: .gitignore  README.md  app.py  baseline.ipynb  pyproject.toml  requirements.txt  run.sh  test.ipynb
example-participant/fl-service/: Dockerfile  app.py  baseline.ipynb  fl-analysis.ipynb  manager.py  pyproject.toml
example-participant/fl-service/notebooks/: baseline.ipynb  caliper-analysis.ipynb  fl-analysis.ipynb
example-participant/fl-service/src/: client.py  server.py
example-participant/fl-service/src/datasets/: README.md  __init__.py  datasets.py  visualize.py
example-participant/fl-service/src/datasets/utils/: __init__.py  leaf.py
example-participant/fl-service/src/fabric/: __init__.py  chaincode.py
example-participant/fl-service/src/models/: mlp.py  simple_cnn.py
example-participant/fl-service/src/models/evaluation/: train_cls.py
example-participant/fl-service/src/models/utils/: __init__.py  checkpoint.py  environment.py  model.py  serde.py
example-participant/fl-service/src/notebooks/: caliper-analysis.ipynb
example-participant/fl-service/src/strategies/: __init__.py  committee_strategy.py
example-participant/fl-service/src/utils/: constants.py  dataset.py  endorsement.py  model.py  shard_balancers.py
plugins/: Dockerfile  Dockerfile.peer  README.md
report/: architecture.drawio.html  architecture.xml  global-aggregation.drawio
test-network/: .gitignore  (+2 more)
(+69 files in other folders)
